<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.AddStoryActivity">


    <ImageView
        android:id="@+id/view_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/placeholder_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <Button
        android:id="@+id/btn_camera_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.5"
        android:elevation="2dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:text="@string/camera_x"
        app:layout_constraintStart_toStartOf="@+id/view_image"
        app:layout_constraintTop_toBottomOf="@+id/view_image" />

    <Button
        android:id="@+id/btn_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:padding="16dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/view_image"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/btn_camera_x"
        app:layout_constraintTop_toTopOf="@+id/btn_camera_x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_album"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_camera_x"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera_x">

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="536dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lokasiku"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="@+id/ti_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_email"
        app:layout_constraintTop_toBottomOf="@+id/ti_email">

        <EditText
            android:id="@+id/et_lokasiku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lokasi"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="536dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/location"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/lokasiku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lokasiku"
        app:layout_constraintTop_toTopOf="@+id/lokasiku"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_location" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/location"
        app:layout_constraintStart_toStartOf="@+id/lokasiku"
        app:layout_constraintTop_toBottomOf="@+id/lokasiku" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>