<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    app:layoutDescription="@xml/activity_sign_in_sence"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_logo"
        android:layout_width="196dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >

        <com.annisaalqorina.submissionstory.customview.EmailView
            android:id="@+id/email_account"
            style="@style/contentfield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp" />

        <com.annisaalqorina.submissionstory.customview.PasswordEdit
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_password_24"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp"
            style="@style/contentfield"
            />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="16dp"
            />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_a_account"
                />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:text="@string/register"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>